--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -93,6 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textColor="@color/black"
 
             android:fontFamily="@font/inter_extralight"
             android:text="Email"
@@ -108,6 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/inter_extralight"
+            android:textColor="@color/black"
 
             android:text="Пароль"
             android:textSize="20sp"
@@ -122,7 +124,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/inter_extralight"
-            android:hint="ФИО"
+            android:text="ФИО"
+            android:textColor="@color/black"
 
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -136,6 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/inter_extralight"
+            android:textColor="@color/black"
 
             android:text="Институт"
             android:textSize="20sp"
@@ -149,7 +153,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
 
-            android:background="@drawable/button_time_shape"
+            android:background="@drawable/button_text_shape"
 
             android:ems="10"
             android:fontFamily="@font/inter_light"
@@ -171,7 +175,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:background="@drawable/button_time_shape"
+            android:background="@drawable/button_text_shape"
             android:ems="10"
             android:fontFamily="@font/inter_light"
             android:hint="Институт"
@@ -191,7 +195,7 @@
             android:id="@+id/editTextText4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_time_shape"
+            android:background="@drawable/button_text_shape"
             android:ems="10"
             android:fontFamily="@font/inter_light"
             android:textColor="@color/black"
@@ -212,7 +216,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:background="@drawable/button_time_shape"
+            android:background="@drawable/button_text_shape"
             android:ems="10"
             android:inputType="textPassword"
             android:fontFamily="@font/inter_light"
