--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -12,60 +12,73 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/booking_button"
-        android:layout_marginStart="38dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/booking_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@id/linearLayoutTime" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/booking_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="80dp"
-        android:textAlignment="center"
-
         android:layout_marginBottom="20dp"
+
         android:background="@drawable/blue_shape"
         android:fontFamily="@font/inter_bold"
-        android:padding="16dp"
         android:gravity="center"
+        android:padding="16dp"
         android:text="Забронировать"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView12"
+    <LinearLayout
+        android:id="@+id/linearLayoutTime"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-
-        android:background="@color/blue"
-        android:fontFamily="@font/inter_bold"
-        android:gravity="center"
-        android:text="Выберите время бронирования"
-        android:textColor="@color/white"
-        android:textSize="19sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/back_label"
-        android:layout_width="wrap_content"
+        android:weightSum="2"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:src="@drawable/back_button"
-        app:layout_constraintStart_toStartOf="@+id/textView12"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/darkblue">
+
+        <ImageView
+            android:id="@+id/back_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:paddingRight="15dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/back_button"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+        android:paddingRight="30dp"
+            android:background="@color/blue"
+            android:fontFamily="@font/inter_bold"
+            android:gravity="center"
+            android:text="Выберите время бронирования"
+            android:textColor="@color/white"
+            android:textSize="19sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
