--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,12 +45,14 @@
     <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/inter_light</item>
+        <item name="android:textSize">16sp</item>
 
         <item name="android:weekNumberColor">@color/white</item>
     </style>
 
     <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">15sp</item>
 
     </style>
     <style name="DividerVertical">
