Connect adminpanel to firestore

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,7 +29,7 @@
             android:fontFamily="@font/inter_bold"
             android:text="Выйти  из аккаунта"
             android:textAllCaps="false"
-            android:textColor="@color/blue4"
+            android:textColor="@color/white"
 
             android:textSize="20sp"
 
