--- a/app/src/main/res/layout/card_reservation_unit.xml
+++ b/app/src/main/res/layout/card_reservation_unit.xml
@@ -25,13 +25,13 @@
             android:weightSum="3">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="465dp"
+                android:layout_width="415dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:padding="9dp">
 
                 <TextView
-                    android:id="@+id/place"
+                    android:id="@+id/userPlace"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -45,7 +45,7 @@
                     app:layout_constraintTop_toTopOf="parent"></TextView>
 
                 <TextView
-                    android:id="@+id/time"
+                    android:id="@+id/userTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_bold"
@@ -57,7 +57,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.491"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/place"></TextView>
+                    app:layout_constraintTop_toBottomOf="@id/userPlace"></TextView>
 
                 <TextView
                     android:id="@+id/timeOfRentInit"
@@ -89,7 +89,7 @@
                 android:paddingTop="12dp">
 
                 <TextView
-                    android:id="@+id/fio"
+                    android:id="@+id/userFio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_bold"
@@ -105,7 +105,7 @@
                     ></TextView>
 
                 <TextView
-                    android:id="@+id/reason"
+                    android:id="@+id/userReason"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
@@ -118,7 +118,7 @@
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/fio"></TextView>
+                    app:layout_constraintTop_toBottomOf="@+id/userFio"></TextView>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/cancelRent"
