--- a/app/src/main/res/layout/card_user_unit.xml
+++ b/app/src/main/res/layout/card_user_unit.xml
@@ -31,7 +31,7 @@
                 android:padding="9dp">
 
                 <TextView
-                    android:id="@+id/place"
+                    android:id="@+id/userPlace"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
@@ -45,7 +45,7 @@
                     app:layout_constraintTop_toTopOf="parent"></TextView>
 
                 <TextView
-                    android:id="@+id/time"
+                    android:id="@+id/userTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_bold"
@@ -57,10 +57,10 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.491"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/place"></TextView>
+                    app:layout_constraintTop_toBottomOf="@id/userPlace"></TextView>
 
                 <TextView
-                    android:id="@+id/institute"
+                    android:id="@+id/userInstitute"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="40dp"
@@ -87,7 +87,7 @@
                 android:padding="@dimen/base_padding">
 
                 <TextView
-                    android:id="@+id/fio"
+                    android:id="@+id/userFio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter_bold"
@@ -103,7 +103,7 @@
                     ></TextView>
 
                 <TextView
-                    android:id="@+id/reason"
+                    android:id="@+id/userReason"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
@@ -116,10 +116,10 @@
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/fio"></TextView>
+                    app:layout_constraintTop_toBottomOf="@+id/userFio"></TextView>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/cancelRent"
+                    android:id="@+id/cancelRentUser"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
