--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -106,7 +106,7 @@
                 app:layout_constraintTop_toBottomOf="@id/email_text" />
 
             <EditText
-                android:id="@+id/institute"
+                android:id="@+id/userInstitute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
