--- a/app/src/main/res/layout/fragment_admin_calendar_1.xml
+++ b/app/src/main/res/layout/fragment_admin_calendar_1.xml
@@ -88,13 +88,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/base_padding"
+            android:layout_marginTop="50dp"
             android:background="@drawable/button_background"
             android:fontFamily="@font/inter_bold"
             android:text="Показать бронирования"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
